change form logic (cherry picked from commit 857fbea)

--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -8,20 +8,13 @@
             <tab heading="Продажа">
                 <tabset class="add_tabs" vertical="true" type="navType" open-on-load="false">
                     <!--TODO: Use tabsMapping and ng-repeat-->
-                    <tab-section tab-title="'Локация'" tab-description="'Адрес, район, метро'" tab-type="'location'" model="model.sale.location" tab-collection-type="sale"></tab-section>
-                    <tab-section tab-title="'Детали'" tab-description="'Площадь, этаж, комнаты, тип, стоимость'" tab-type="'details'" model="model.sale.details" tab-collection-type="sale"></tab-section>
-                    <tab-section tab-title="'Фотографии'" tab-description="'Настоящие фотографии объекта'" tab-type="'photos'" model="model.sale.photos" tab-collection-type="sale"></tab-section>
-                    <tab-section tab-title="'Документы'" tab-description="'Свидетельство о собственности, <br>кадастровый номер'" tab-type="'docs'" model="model.sale.docs" tab-collection-type="sale"></tab-section>
+                    <tab-section ng-repeat="tab in tabs.sale track by tab.tabType" disabled="tab.disabled" current-tab="tab" model="model.sale[tab.tabType]" tab-collection-type="sale"></tab-section>
                 </tabset>
             </tab>
             <tab heading="Обмен">
                 <tabset class="add_tabs" vertical="true" type="navType" open-on-load="false">
                     <!--TODO: Use tabsMapping and ng-repeat-->
-                    <tab-section tab-title="'Локация'" tab-description="'Адрес, район, метро'" tab-type="'location'" model="model.swap.location" tab-collection-type="change"></tab-section>
-                    <tab-section tab-title="'Детали'" tab-description="'Площадь, этаж, комнаты, тип, стоимость'" tab-type="'details'" model="model.swap.details"  tab-collection-type="change"></tab-section>
-                    <tab-section tab-title="'Фотографии'" tab-description="'Настоящие фотографии объекта'" tab-type="'photos'" model="model.swap.photos"  tab-collection-type="change"></tab-section>
-                    <tab-section tab-title="'Документы'" tab-description="'Свидетельство о собственности, <br>кадастровый номер'" tab-type="'docs'" model="model.swap.docs"  tab-collection-type="change"></tab-section>
-                    <tab-section tab-title="'Куда хочу переехать'" tab-description="'Адрес, площадь, комнаты, стоимость'" tab-type="'change'" model="model.swap.change"  tab-collection-type="change"></tab-section>
+                    <tab-section ng-repeat="tab in tabs.swap track by tab.tabType" current-tab="tab" model="model.swap[tab.tabType]" tab-collection-type="swap"></tab-section>
                 </tabset>
             </tab>
         </tabset>
