--- a/Client.Web/Scripts/app/component/tab-section/templates/docs.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/docs.html
@@ -31,4 +31,4 @@
     </div>
 </div>
 
-<button class="button action action_next green large next" ng-click="$parent.$parent.saveAndGoTo('change', tabCollectionType)">Сохранить и перейти дальше</button>
+<button class="button action action_next green large next" ng-click="saveAndGoTo(currentTab, tabCollectionType)">Сохранить и перейти дальше</button>
