--- a/Client.Web/Scripts/app/component/tab-section/templates/photos.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/photos.html
@@ -28,4 +28,4 @@
 </form>
 
 
-<button class="button action action_next green large next"  ng-click="$parent.$parent.saveAndGoTo('docs', tabCollectionType)">Сохранить и перейти дальше</button>
+<button class="button action action_next green large next" ng-click="saveAndGoTo(currentTab, tabCollectionType)">Сохранить и перейти дальше</button>
