--- a/Client.Web/Scripts/app/component/tab-section/tab-section.html
+++ b/Client.Web/Scripts/app/component/tab-section/tab-section.html
@@ -2,7 +2,7 @@
     <tab-heading>
         <div class="tab_title">{{::currentTab.tabTitle}}</div>
         <div class="tab_description" ng-bind-html="::currentTab.tabDescription"></div>
-        <button class="button action tab_control">Заполнить</button>
+        <button class="button action tab_control">{{currentTab.filled ? 'Изменить' : 'Заполнить'}}</button>
     </tab-heading>
 
     <div class="tab_content">
