Add red border to invalid elements

--- a/Client.Web/Scripts/app/component/tab-section/tab-section.html
+++ b/Client.Web/Scripts/app/component/tab-section/tab-section.html
@@ -1,4 +1,4 @@
-<tab class="tab-section" active="currentTab.active" disabled="currentTab.disabled">
+<tab class="tab-section {{currentTab.disabled}}" active="currentTab.active" disabled="currentTab.disabled" >
     <tab-heading>
         <div class="tab_title">{{::currentTab.tabTitle}}</div>
         <div class="tab_description" ng-bind-html="::currentTab.tabDescription"></div>
