--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -1,56 +1,62 @@
-<div class="clearfix">
+﻿<div class="clearfix">
     <div class="left-column clearfix" style="width: 673px;float: left;padding-right: 26px;">
         <div class="apartment-summary-wrapper" style="padding-bottom: 26px;">
             <div class="apartment-summary" style="height: 477px;background: #fff;border-radius: 8px;padding: 22px 29px;">
-                <h6 style="color: #b3c4cf;font-size: 12px;font-weight: bold;">{{flat.summary.roomsCount}}-КОМНАТНАЯ КВАРТИРА</h6>
-                <h4 style="margin-top: 15px;">{{flat.summary.address}}</h4>
-                <span style="font-weight: 500;">{{flat.summary.price | currency : '₽' : ' '}}</span>
-                <span style="font-weight: 500;padding-left: 20px;"><i class="icon metro" style="display: inline-block; width: 16px; height: 11px; margin-right: 3px; background: url('../content/images/metro_logo.png') no-repeat;"></i>{{flat.summary.station}}, {{flat.summary.district}}</span>
+                <h6 style="color: #b3c4cf;font-size: 12px;font-weight: bold;">{{testData.roomCount}}-КОМНАТНАЯ КВАРТИРА</h6>
+                <h4 style="margin-top: 15px;">
+                    {{testData.cityName}},
+                    ул. {{testData.streetName}},
+                    д. {{testData.houseNumber}},
+                    {{testData.housing ? 'корп ' + testData.housing +', ' : '' }}
+                    кв. {{testData.apartmentNumber}}
+                </h4>
+                <span style="font-weight: 500;">{{testData.cost | currencyFilter : '₽' : ' '}}</span>
+                <span style="font-weight: 500;padding-left: 20px;"><i class="icon metro" style="display: inline-block; width: 16px; height: 11px; margin-right: 3px; background: url('../content/images/metro_logo.png') no-repeat;"></i>{{testData.nearMetroStationModel.name}}</span>
                 <div class="clearfix" style="max-width: 600px;margin-top: 35px;">
                     <div class="clearfix" style="float: left;width: 250px;">
                         <span style="font-size: 18px;font-weight: 900;">Основное</span>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Этаж</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.floor}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.level}}</span>
                         </div>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Площадь</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.area}} м<sup>2</sup></span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.areaSize}} м<sup>2</sup></span>
                         </div>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Количество комнат</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.roomsCount}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.roomCount}}</span>
                         </div>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Тип недвижимости</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.type}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.buildingCategory === 1 ? 'Квартира' :'Дом'}}</span>
                         </div>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Категория строения</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.category}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.type === 1 ? 'Новостройка' : 'Обмен'}}</span>
                         </div>
                     </div>
                     <div class="clearfix" style="float: right;width: 280px;">
                         <span style="font-size: 18px;font-weight: 900;">Дополнительно</span>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Предоставлены документы</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.hasDocs ? 'Да' : 'Нет'}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.ownerUploadedDocuments ? 'Да' : 'Нет'}}</span>
                         </div>
                         <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
                             <span style="float: left;">Дата публикации</span>
-                            <span style="float: right;color: #7d7d7d;">{{flat.summary.publishDate | date : 'dd.MM.yyyy'}}</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.creationDate | date : 'dd.MM.yyyy'}}</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="apartment-description" style="width: 647px;height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
-            {{flat.summary.description}}
+            {{testData.comment}}
         </div>
     </div>
     <div class="right-column clearfix" style="width: 673px;float: right;">
         <div style="width: 673px;height: 547px; margin-bottom: 26px; border-radius: 8px; overflow: hidden;">
-            <carousel images="flat.images"></carousel>
+            <carousel images="testData.photos"></carousel>
         </div>
 
         <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px;  border-radius: 8px; overflow: hidden;">
