Add red border to invalid elements

--- a/Client.Web/Scripts/app/theme/style/pages/add.scss
+++ b/Client.Web/Scripts/app/theme/style/pages/add.scss
@@ -158,6 +158,13 @@ $tab-active-bg: #f8fafb;
           }
 
         }
+        &.disabled {
+          a {
+            .tab_control {
+              display: none;
+            }
+          }
+        }
 
         &.active {
           border: {
