--- a/Client.Web/Scripts/app/component/tab-section/templates/swap.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/swap.html
@@ -48,5 +48,5 @@
         <input type="checkbox" class="checkbox" id="confirm"><label for="confirm">После публикации перейти к добавлению объекта</label>
     </div>
 
-    <button class="button action action_next orange large finish" ng-disabled="!changeForm.$valid">Сохранить и опубликовать</button>
+    <button class="button action action_next orange large finish" ng-disabled="!changeForm.$valid" ng-click="sendData()">Сохранить и опубликовать</button>
 </form>
