Add red border to invalid elements

--- a/Client.Web/Scripts/app/component/tab-section/templates/details.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/details.html
@@ -10,7 +10,7 @@
     <label class="form-label">
         <div class="label-title">Площадь, м<sup>2</sup></div>
         <div class="label-item">
-            <input type="text" ng-model="$parent.model.square" ng-pattern="'\\d*'" ng-maxlength="4"  placeholder="Общая площадь помещения" required>
+            <input type="text" ng-model="$parent.model.area" ng-pattern="'\\d*'" ng-maxlength="4"  placeholder="Общая площадь помещения" required>
         </div>
     </label>
 
