Add red border to invalid elements

--- a/Client.Web/Scripts/app/component/tab-section/templates/docs.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/docs.html
@@ -31,5 +31,5 @@
     </div>
 </div>
 
-<button ng-if="!tabCollectionType === 'sale'" class="button action action_next green large next" ng-click="saveAndGoTo(currentTab, tabCollectionType)">Сохранить и перейти дальше</button>
+<button ng-if="tabCollectionType !== 'sale'" class="button action action_next green large next" ng-click="saveAndGoTo(currentTab, tabCollectionType)">Сохранить и перейти дальше</button>
 <button ng-if="tabCollectionType === 'sale'" class="button action action_next orange large finish" ng-disabled="!uploadedFiles.length" ng-click="sendData(0)">Сохранить и опубликовать</button>
