--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -10,7 +10,7 @@
                     {{testData.housing ? 'корп ' + testData.housing +', ' : '' }}
                     кв. {{testData.apartmentNumber}}
                 </h4>
-                <span style="font-weight: 500;">{{testData.cost | currencyFilter : '₽' : ' '}}</span>
+                <span style="font-weight: 500;">{{testData.cost | currency : '₽' : ' '}}</span>
                 <span style="font-weight: 500;padding-left: 20px;"><i class="icon metro" style="display: inline-block; width: 16px; height: 11px; margin-right: 3px; background: url('../content/images/metro_logo.png') no-repeat;"></i>{{testData.nearMetroStationModel.name}}</span>
                 <div class="clearfix" style="max-width: 600px;margin-top: 35px;">
                     <div class="clearfix" style="float: left;width: 250px;">
