Fiex error field

--- a/Client.Web/Scripts/app/component/tab-section/templates/location.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/location.html
@@ -33,8 +33,7 @@
         <label class="form-label">
             <div class="label-title">Квартира</div>
             <div class="label-item">
-                <input type="text" ng-model="$parent.model.flat" class="error">
-                <span class="error-message">Ошибка</span>
+                <input type="text" ng-model="$parent.model.flat">
             </div>
         </label>
     </div>
