--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -7,12 +7,12 @@
         <tabset class="type-switcher">
             <tab heading="Продажа" ng-click="$parent.$parent.tabCollectionType = 'sale'">
                 <tabset class="add_tabs" vertical="true" type="navType" open-on-load="false">
-                    <tab-section ng-repeat="tab in tabs.sale track by tab.tabType" disabled="tab.disabled" current-tab="tab" model="model.sale[tab.tabType]" tab-collection-type="sale"></tab-section>
+                    <tab-section ng-repeat="tab in tabs.sale track by ::tab.tabType" disabled="tab.disabled" current-tab="tab" model="model.sale[tab.tabType]" tab-collection-type="sale"></tab-section>
                 </tabset>
             </tab>
             <tab heading="Обмен" ng-click="$parent.$parent.tabCollectionType = 'swap'">
                 <tabset class="add_tabs" vertical="true" type="navType" open-on-load="false">
-                    <tab-section ng-repeat="tab in tabs.swap track by tab.tabType" current-tab="tab" model="model.swap[tab.tabType]" tab-collection-type="swap"></tab-section>
+                    <tab-section ng-repeat="tab in tabs.swap track by ::tab.tabType" current-tab="tab" model="model.swap[tab.tabType]" tab-collection-type="swap"></tab-section>
                 </tabset>
             </tab>
         </tabset>
@@ -39,7 +39,7 @@
             <div class="card_description">
                 <div class="card-title" ng-show="roomCountNames[model.swap.details.roomsCount - 1]">{{roomCountNames[model.swap.details.roomsCount - 1] + ' квартира'}}</div>
                 <div class="card-info"><span class="metro-label" style="background-color: red"></span> <span ng-show="model.swap.location.selectedStations[0].name">{{model.swap.location.selectedStations[0].name}}, </span>
-                    <span ng-show="model.sale.details.area">{{model.swap.details.area}} м<sup>2</sup>, </span><span ng-show="model.swap.details.floor">{{model.swap.details.floor}} этаж</span>
+                    <span ng-show="model.swap.details.area">{{model.swap.details.area}} м<sup>2</sup>, </span><span ng-show="model.swap.details.floor">{{model.swap.details.floor}} этаж</span>
                 </div>
                 <div class="card-price" ng-show="model.swap.details.price">{{model.swap.details.price | currency : '&#8381;' : ''}}</div>
             </div>
