--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -2,7 +2,7 @@
   <img ui-sref="search" src="../Content/Images/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
-    <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартир</a>
+    <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартиры</a>
     <a ui-sref="my-ads"  ng-style="!accessToken ? {'visibility':'hidden'} : ''" ui-sref-active="active" class="menu-item">Мои объекты</a>
   </nav>
   <button ui-sref="add-ads" type="button" class="button round alert">Продать квартиру</button>
