add station filter

--- a/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
+++ b/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
@@ -5,7 +5,7 @@
     </div>
     <div class="input-container underground-name">
         <h6 class="input-label">Метро</h6>
-        <multiselect-dropdown selected-items="selectedStations"></multiselect-dropdown>
+        <multiselect-dropdown selected-items="selectedStations" city-id="cityId"></multiselect-dropdown>
     </div>
     <div class="input-container price">
         <h6 class="input-label">Стоимость, &#8381;</h6>
