--- a/Client.Web/Scripts/app/component/tab-section/templates/location.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/location.html
@@ -53,7 +53,7 @@
         <div class="label-title">Метро</div>
         <div class="label-item">
             <multiselect-dropdown-g class="add-station"
-                                    selected-items="$parent.model.selectedStations"></multiselect-dropdown-g>
+                                    selected-items="$parent.model.selectedStations" city-id="$parent.model.city.id"></multiselect-dropdown-g>
         </div>
 
     </label>
