--- a/Client.Web/Scripts/app/component/tab-section/tab-section.scss
+++ b/Client.Web/Scripts/app/component/tab-section/tab-section.scss
@@ -147,7 +147,7 @@
       display: inline-block;
       width: 296px;
       height: 300px;
-      background: url('../../../content/images/plus-icon.svg') no-repeat 50% 40%;
+      background: url('../../../images/plus-icon.svg') no-repeat 50% 40%;
       border-radius: 5px;
       border: solid 1px #d4dee4;
       cursor: pointer;
