--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
@@ -8,7 +8,7 @@
     </ul>
     <ul class="dropdown-selected-list" ng-show="selectedItems.length">
         <li class="list-item" ng-repeat="item in selectedItems track by $index" ng-click="removeItem($index)">
-            <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
+            <span class="mid-dot" ng-style="{color: '#' + item.hexColor}">&middot</span>
             {{item.name}}
             <span class="list-item-remove">x</span>
         </li>
