--- a/Client.Web/Scripts/app/component/tab-section/templates/docs.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/docs.html
@@ -3,11 +3,11 @@
         <div class="download-list-file-wrapper doc" ng-repeat="file in uploadedFiles track by $index" ng-click="setCover($index)">
             <div class="file-label-name">{{file.formattedName}}</div>
             <div class="label file-label-format {{file.format.toLowerCase()}}">{{file.format}}</div>
-            <div class="file-label-remove" ng-click="removeFile($index, true);"></div>
+            <div class="file-label-remove" ng-click="removeFile($index, true, 'doc');"></div>
         </div><div class="download-list-uploader"
            ng-class="{added: isAdded}"
-             ngf-drop="uploadFiles($files, true)"
-             ngf-select="uploadFiles($files, true)"
+             ngf-drop="uploadFiles($files, true, 'doc')"
+             ngf-select="uploadFiles($files, true, 'doc')"
              ngf-validate="{size: {max: '5MB'}, pattern: '.doc,.pdf,.docx,.pages,.txt'}"
              ngf-max-files="20"
              multiple="true">
