--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -21,11 +21,15 @@
         <a class="flat-card add_flat" ng-show="tabCollectionType === 'sale'">
             <div class="preview-label">Предпросмотр</div>
             <div class="card_image">
+                <div ng-show="!model.sale.photos.length" style="font-size: 14px; font-weight: 700; text-align: center; color: #7d98a7; background-color: #e0e9ee; height: 100%; padding: 87px 105px;">Фотографии ещё не загружены</div>
                 <img ng-src="{{model.sale.photos[0].url}}" alt="">
             </div>
             <div class="card_description">
+                <div ng-hide="model.sale.details.price || model.sale.details.floor || model.sale.details.area || model.sale.details.roomsCount || model.sale.location.selectedStations[0].name"
+                     style="font-size: 16px; font-weight: 500; line-height: 1.31; text-align: center; color: #181818; padding: 17px;">Здесь будет информация о вашем объекте</div>
+
                 <div class="card-title" ng-show="roomCountNames[model.sale.details.roomsCount - 1]">{{roomCountNames[model.sale.details.roomsCount - 1] + ' квартира'}}</div>
-                <div class="card-info"><span class="metro-label" style="background-color: red"></span> <span ng-show="model.sale.location.selectedStations[0].name">{{model.sale.location.selectedStations[0].name}}, </span>
+                <div class="card-info"><!--span class="metro-label" style="background-color: red"--></span> <span ng-show="model.sale.location.selectedStations[0].name">{{model.sale.location.selectedStations[0].name}}, </span>
                     <span ng-show="model.sale.details.area">{{model.sale.details.area}} м<sup>2</sup>, </span><span ng-show="model.sale.details.floor">{{model.sale.details.floor}} этаж</span>
                 </div>
                 <div class="card-price" ng-show="model.sale.details.price">{{model.sale.details.price | currency : '&#8381;' : ''}}</div>
@@ -34,11 +38,14 @@
         <a class="flat-card add_flat" ng-show="tabCollectionType !== 'sale'">
             <div class="preview-label">Предпросмотр</div>
             <div class="card_image">
+                <div ng-show="!model.swap.photos.length" style="font-size: 14px; font-weight: 700; text-align: center; color: #7d98a7; background-color: #e0e9ee; height: 100%; padding: 87px 105px;">Фотографии ещё не загружены</div>
                 <img ng-src="{{model.swap.photos[0].url}}" alt="">
             </div>
             <div class="card_description">
+                <div ng-hide="model.swap.details.floor || model.swap.details.area || model.swap.details.roomsCount || model.swap.location.selectedStations[0].name"
+                     style="font-size: 16px; font-weight: 500; line-height: 1.31; text-align: center; color: #181818; padding: 17px;">Здесь будет информация о вашем объекте</div>
                 <div class="card-title" ng-show="roomCountNames[model.swap.details.roomsCount - 1]">{{roomCountNames[model.swap.details.roomsCount - 1] + ' квартира'}}</div>
-                <div class="card-info"><span class="metro-label" style="background-color: red"></span> <span ng-show="model.swap.location.selectedStations[0].name">{{model.swap.location.selectedStations[0].name}}, </span>
+                <div class="card-info"><!--span class="metro-label" style="background-color: red"--></span> <span ng-show="model.swap.location.selectedStations[0].name">{{model.swap.location.selectedStations[0].name}}, </span>
                     <span ng-show="model.swap.details.area">{{model.swap.details.area}} м<sup>2</sup>, </span><span ng-show="model.swap.details.floor">{{model.swap.details.floor}} этаж</span>
                 </div>
                 <div class="card-price" ng-show="model.swap.details.price">{{model.swap.details.price | currency : '&#8381;' : ''}}</div>
