--- a/Client.Web/Scripts/app/component/multiselect-dropdown-g/multiselect-dropdown-g.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown-g/multiselect-dropdown-g.html
@@ -1,7 +1,7 @@
 <div class="multiselect-dropdown-g" on-click-outside="showList = false;">
     <ul class="dropdown-selected-list" ng-show="selectedItems.length">
         <li class="list-item" ng-repeat="item in selectedItems track by $index" ng-click="removeItem($index)">
-            <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
+            <span class="mid-dot" ng-style="{color: '#' + item.hexColor}">&middot</span>
             {{item.name}}
             <span class="list-item-remove">&times;</span>
         </li>
