--- a/Client.Web/Scripts/app/component/multiselect-dropdown-g/multiselect-dropdown-g.scss
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown-g/multiselect-dropdown-g.scss
@@ -18,13 +18,14 @@
 
     .list-item {
       cursor: pointer;
-      padding: 0 10px;
+      padding: 10px 30px 10px 10px;
       font-size: 16px;
-      line-height: 40px;
+      min-height: 40px;
       position: relative;
       border: 1px solid #d3dde2;
       border-bottom: none;
       background: transparent;
+      line-height: 18px;
 
       &:first-child {
         border-top-left-radius: 3px;
@@ -45,7 +46,10 @@
         font-size: 20px;
         position: absolute;
         right: 16px;
-        line-height: 42px;
+        display: block;
+        width: 12px;
+        height: 12px;
+        top: 12pxpx;
       }
       &:hover {
         .mid-dot {
@@ -77,7 +81,8 @@
     border-bottom-right-radius: 3px;
 
     .list-item {
-      padding: 2px 10px;
+      padding: 11px 30px 11px 10px;
+      line-height: 18px;
       text-indent: 0;
       border: none;
       &:hover {
