--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -22,7 +22,7 @@
             <div class="preview-label">Предпросмотр</div>
             <div class="card_image">
                 <div ng-show="!model.sale.photos.length" style="font-size: 14px; font-weight: 700; text-align: center; color: #7d98a7; background-color: #e0e9ee; height: 100%; padding: 87px 105px;">Фотографии ещё не загружены</div>
-                <img ng-src="{{model.sale.photos[0].url}}" alt="">
+                <img ng-src="{{model.sale.photos | coverPhotoUrl}}" alt="">
             </div>
             <div class="card_description">
                 <div ng-hide="model.sale.details.price || model.sale.details.floor || model.sale.details.area || model.sale.details.roomsCount || model.sale.location.selectedStations[0].name"
@@ -39,7 +39,7 @@
             <div class="preview-label">Предпросмотр</div>
             <div class="card_image">
                 <div ng-show="!model.swap.photos.length" style="font-size: 14px; font-weight: 700; text-align: center; color: #7d98a7; background-color: #e0e9ee; height: 100%; padding: 87px 105px;">Фотографии ещё не загружены</div>
-                <img ng-src="{{model.swap.photos[0].url}}" alt="">
+                <img ng-src="{{model.swap.photos | coverPhotoUrl}}" alt="">
             </div>
             <div class="card_description">
                 <div ng-hide="model.swap.details.floor || model.swap.details.area || model.swap.details.roomsCount || model.swap.location.selectedStations[0].name"
