--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -29,7 +29,9 @@
                      style="font-size: 16px; font-weight: 500; line-height: 1.31; text-align: center; color: #181818; padding: 17px;">Здесь будет информация о вашем объекте</div>
 
                 <div class="card-title" ng-show="roomCountNames[model.sale.details.roomsCount - 1]">{{roomCountNames[model.sale.details.roomsCount - 1] + ' квартира'}}</div>
-                <div class="card-info"><!--span class="metro-label" style="background-color: red"--></span> <span ng-show="model.sale.location.selectedStations[0].name">{{model.sale.location.selectedStations[0].name}}, </span>
+                <div class="card-info">
+                    <span class="metro-label" ng-show="model.sale.location.selectedStations[0].name" ng-style="{'background-color': '#' + model.sale.location.selectedStations[0].hexColor}"></span>
+                    <span ng-show="model.sale.location.selectedStations[0].name">{{model.sale.location.selectedStations[0].name}}, </span>
                     <span ng-show="model.sale.details.area">{{model.sale.details.area}} м<sup>2</sup>, </span><span ng-show="model.sale.details.floor">{{model.sale.details.floor}} этаж</span>
                 </div>
                 <div class="card-price" ng-show="model.sale.details.price">{{model.sale.details.price | currency : '&#8381;' : ''}}</div>
@@ -45,7 +47,9 @@
                 <div ng-hide="model.swap.details.floor || model.swap.details.area || model.swap.details.roomsCount || model.swap.location.selectedStations[0].name"
                      style="font-size: 16px; font-weight: 500; line-height: 1.31; text-align: center; color: #181818; padding: 17px;">Здесь будет информация о вашем объекте</div>
                 <div class="card-title" ng-show="roomCountNames[model.swap.details.roomsCount - 1]">{{roomCountNames[model.swap.details.roomsCount - 1] + ' квартира'}}</div>
-                <div class="card-info"><!--span class="metro-label" style="background-color: red"--></span> <span ng-show="model.swap.location.selectedStations[0].name">{{model.swap.location.selectedStations[0].name}}, </span>
+                <div class="card-info">
+                    <span class="metro-label" ng-show="model.swap.location.selectedStations[0].name" ng-style="{'background-color': '#' + model.swap.location.selectedStations[0].hexColor}"></span>
+                    <span ng-show="model.swap.location.selectedStations[0].name">{{model.swap.location.selectedStations[0].name}}, </span>
                     <span ng-show="model.swap.details.area">{{model.swap.details.area}} м<sup>2</sup>, </span><span ng-show="model.swap.details.floor">{{model.swap.details.floor}} этаж</span>
                 </div>
                 <div class="card-price" ng-show="model.swap.details.price">{{model.swap.details.price | currency : '&#8381;' : ''}}</div>
