--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -70,7 +70,7 @@
 
         <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px;  border-radius: 8px; overflow: hidden;">
             <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-controls>
-                <ya-geo-object ya-source="flat.coords"
+                <ya-geo-object ya-source="testData.coords"
                                ya-options="{iconLayout: 'default#image',
                                             iconImageHref: '../content/images/map-icon-hover.svg',
                                             iconImageSize: [45, 45],
