--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -25,7 +25,9 @@
     </div>
     <div class="right-column column">
         <div class="search-map" style="width: 100%;height: 800px;">
-            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-controls>
+            <ya-map ya-zoom="10"
+                    ya-center="[37.62,55.747]" ya-controls
+                    ya-event-boundschange="sendCoords($event)">
                 <ya-geo-object ng-repeat="flat in flats track by flat.id" ya-source="flat.coords"
                                ya-show-all="true"
                                ya-options="{
