--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
@@ -1,8 +1,10 @@
 <div class="multiselect-dropdown" on-click-outside="showList = false;">
-    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-change="showList = true; getStations(dropdownFilter)" ng-model-options="{ debounce: 150 }" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
+    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-change="showList = true; getStations(dropdownFilter)" ng-model-options="{debounce: 150}"
+           placeholder="{{selectedItems.length ? (selectedItems.length + getDeclension(selectedItems.length, [' станция', ' станции', ' станций'])) : 'Любое'}}"/>
+
     <ul class="dropdown-list" ng-show="showList && filteredItems.length">
         <li class="list-item" ng-repeat="item in filteredItems track by $index" ng-click="selectItem(item, $event)">
-            <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
+            <span class="mid-dot" ng-style="{color: '#' + item.hexColor}">&middot</span>
             {{item.name}}
         </li>
     </ul>
