Fixes for doc format, photo and doc count, fix coord for created object

--- a/Client.Web/Scripts/app/component/tab-section/templates/photos.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/photos.html
@@ -12,6 +12,7 @@
              ngf-drop="uploadFiles($files)"
              ngf-select="uploadFiles($files)"
              ngf-validate="{size: {max: '5MB'}, pattern: '.jpeg,.jpg,.png', totalSize: {max: '50MB'}}"
+             ngf-max-files="20"
              multiple="true">
             <div class="download-list-uploader-text">
                 <div class="download-description">
