--- a/Client.Web/Scripts/app/theme/style/buttons.scss
+++ b/Client.Web/Scripts/app/theme/style/buttons.scss
@@ -1,8 +1,9 @@
-﻿.button {
+.button {
   outline: none !important;
   &.round {
     padding: 10px 25px;
     font-size: 14px;
+    margin:0;
   }
   &.alert {
     background-color: #ff6f37;
