вывод списка объектов по 6 штук с пагинацией

--- a/Client.Web/Scripts/app/component/gheader/gheader.scss
+++ b/Client.Web/Scripts/app/component/gheader/gheader.scss
@@ -60,6 +60,6 @@
   .button {
     vertical-align: middle;
     margin-bottom: 35px;
-    margin-right: 45px;
+    margin-right: 45px !important;
   }
 }
