--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -1,7 +1,10 @@
 <div class="search-page clearfix">
     <div class="left-column column">
-        <flat-filter class="flat_filter" all-flats="flats" filtered-flats="filteredFlats"></flat-filter>
+        <div style="background-color: red; ">
 
+
+            <flat-filter class="flat_filter" all-flats="flats" filtered-flats="filteredFlats"></flat-filter>
+        </div>
         <div class="offers">
             <div class="title">
                 <span class="count">{{filteredFlats.length}}</span> предложений
@@ -24,7 +27,7 @@
         </div>
     </div>
     <div class="right-column column">
-        <div class="search-map" style="width: 100%;height: 800px;">
+        <div class="search-map">
             <ya-map ya-zoom="10"
                     ya-center="[37.62,55.747]" ya-controls
                     ya-event-boundschange="sendCoords($event)">
