--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -5,7 +5,7 @@
     <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартиры</a>
     <a ui-sref="my-ads"  ng-style="!accessToken ? {'visibility':'hidden'} : ''" ui-sref-active="active" class="menu-item">Мои объекты</a>
   </nav>
-  <button ui-sref="add-ads" ng-disabled="!accessToken" type="button" class="button round alert">Продать квартиру</button>
+  <button ng-click="addAds()"  type="button" class="button round alert">Продать квартиру</button>
   <div class="black text" ng-show="!accessToken" ng-click="login()">Войти в профиль</div>
   <div class="black text" ng-show="accessToken" ng-click="logout()">Выйти из профиля</div>
   <div class="user-logo">
