#GIG-273 Просмотр объекта. Если длинное описание, едет верстка

--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <div class="apartment-description" style="width: 647px;height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
+        <div class="apartment-description" style="width: 647px;min-height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
             {{testData.comment}}
         </div>
     </div>
