--- a/Client.Web/Scripts/app/component/tab-section/templates/swap.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/swap.html
@@ -39,8 +39,8 @@
     <label class="form-label">
         <div class="label-title">Стоимость, &#8381;</div>
         <div class="double-input">
-            <input type="text" ng-model="$parent.model.minPrice" ng-pattern="'\\d*'" ng-maxlength="12" placeholder="От" required>
-            <input type="text" ng-model="$parent.model.maxPrice" ng-pattern="'\\d*'" ng-maxlength="12" placeholder="До" required>
+            <input type="text" ng-model="$parent.model.minPrice" strict-price-input placeholder="От" required>
+            <input type="text" ng-model="$parent.model.maxPrice" strict-price-input placeholder="До" required>
         </div>
     </label>
 
